--- a/_posts/2020-06-24-12-Hanoi.markdown
+++ b/_posts/2020-06-24-12-Hanoi.markdown
@@ -5,8 +5,8 @@ date:   2020-06-24 04:04:34 -0400
 categories: jekyll update
 ---
 
-I've been reading [Algorithms][algorithms] by Jeff Erickson and one of the very first ones that he talks about is the Tower of Hanoi algorithm. He covers this cool 
-story from N. Claus (de Siam) below which I thought was cool. 
+**I've been reading [Algorithms][algorithms] by Jeff Erickson and one of the very first ones that he talks about is the Tower of Hanoi algorithm. He covers this cool 
+story from N. Claus (de Siam) below which I thought was cool.** 
 
 *In the great temple at Benares. . . beneath the dome which marks the centre of
 the world, rests a brass plate in which are fixed three diamond needles, each
@@ -22,14 +22,14 @@ transferred from the needle on which at the creation God placed them to one
 of the other needles, tower, temple, and Brahmins alike will crumble into dust,
 and with a thunderclap the world will vanish.*
 
-The coolest part of the story was how long it would take to move all 64 discs from one pile to the next. 
+**The coolest part of the story was how long it would take to move all 64 discs from one pile to the next.**
 
 *In particular, moving a tower of 64 disks requires 2**64 - 1 =
  18,446,744,073,709,551,615 individual moves. Thus, even at the impressive rate
 of one move per second, the monks at Benares will be at work for approximately
  billion years*
 
-I wrote the solutions to the problem in python and rust. 
+**I wrote the solutions to the problem in python and rust.** 
 
 {% highlight python %}
 
