--- a/_posts/2020-07-03-12-Netbox_SSH.markdown
+++ b/_posts/2020-07-03-12-Netbox_SSH.markdown
@@ -7,7 +7,7 @@ categories: jekyll update
 
 **Stephen Follett asked for the ability to ssh from Netbox directly to a network device. We thought it was a great idea and figured out how to make it happen. When you log into Netbox now you will see an Orange SSH button on the top right of a router device type. Currently only doing this for routers, but plan to add switches soon.**
 
-![Netbox-Device-View])/_site/_images/Device_view.pgj)
+![Netbox-Device-View])/_site/_images/Device_view.pgj){:class="img-responsive"}
 
 **The coolest part of the story was how long it would take to move all 64 discs from one pile to the next.**
 
