--- a/_posts/2020-07-03-12-Netbox_SSH.markdown
+++ b/_posts/2020-07-03-12-Netbox_SSH.markdown
@@ -7,63 +7,14 @@ categories: jekyll update
 
 **Stephen Follett asked for the ability to ssh from Netbox directly to a network device. We thought it was a great idea and figured out how to make it happen. When you log into Netbox now you will see an Orange SSH button on the top right of a router device type. Currently only doing this for routers, but plan to add switches soon.**
 
-![Netbox-Device-View])/_site/_images/Device_view.pgj){:class="img-responsive"}
+![Netbox-Device-View](/assets/Device_view.JPG)
 
-**The coolest part of the story was how long it would take to move all 64 discs from one pile to the next.**
+**Our original plan was to add a custom field on the device which would've had ssh:// with the primary IP of the device in it. In order to accomplish this we would have add to do API gets to the device and append the IP to ssh:// for each device. I decided to do some research and found a better option using custom links. Under the admin panel you can create custom links and assign them to specific things. For this example I assigned them to dcim/device and then used jinja conditionals to make sure the button only showed up on MFS routers. Below is the image showing how this button is configured.**
 
-*In particular, moving a tower of 64 disks requires 2**64 - 1 =
- 18,446,744,073,709,551,615 individual moves. Thus, even at the impressive rate
-of one move per second, the monks at Benares will be at work for approximately
- billion years*
+**Content type specifics the page in netbox the link is going to show up on and then we narrow it down to devices that are assigned the "Cisco Based" platform as long as they are not a switch in the Text: block. The URL block contains the magic that makes this link dynamic. When working with custom links in Netbox you can use jinja variable syntax to access device attributes from the Netbox Postgres database. What this link is doing is appending the object or device primary_ip field and taking the address value of that field and appending it to ssh://. This is really cool, because if that device IP ever changes in netbox you only make the change one place (IPAM→IP Address) and the link will update automatically.**
 
-**I wrote the solutions to the problem in python and rust.** 
+ADD IMAGE HERE
 
-{% highlight python %}
-def hanoi(discs, src, tmp, dest):
-    if discs == 1:
-       print ('Move disc 1 from peg {} to peg {}.'.format(src, dest) )
-       return
-    
-    hanoi(discs - 1, src, dest, tmp)
-    print ('Move disc {} from peg {} to peg {}.'.format(discs, src, dest) )  
-    hanoi(discs - 1, tmp, src, dest)
+**I have this working at work on Chrome if you have Winscp and Putty installed or on Firefox with SecureCRT. There is a change you have to make to Firefox about:config settings to make it work. Set the value in the image below to False. If anyone else has some great ideas like this one let us know and we will do our best to get it into the tool set.**
 
-    
-discs = int(input('Enter the number of discs: '))
-hanoi(discs, 'A', 'B', 'C')
-{% endhighlight %}
-
-{% highlight rust %}
-use std::io;
-
-fn main() {
-
-    println!("Please input the number of discs:");
-
-    let mut discs = String::new();
-
-    io::stdin().read_line(&mut discs)
-        .expect("Failed to read line");
-
-    let discs: u32 = discs.trim().parse().expect("Please type a number!");
-
-    println!("You entered: {} discs", discs);
-
-   hanoi(discs, "A", "B", "C");
-}
-
-fn hanoi(discs: u32, src: &str, tmp: &str, dest: &str) {
-    
-    
-    if discs == 1 {
-        println!("Move disc 1 from peg {} to peg {}",src, dest);
-        return;
-    }
-    hanoi(discs -1, src, dest, tmp);
-    println!("Move disc {} from peg {} to peg {}", discs, src, dest);
-    hanoi(discs -1, tmp, src, dest);
-
-}
-{% endhighlight %}
-
-[Algorithms]: https://jeffe.cs.illinois.edu/teaching/algorithms/
+ADD IMAGE HERE
